Cap 8/d-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
spec:
  selector:
    matchLabels:
      app: ubuntu
      replicas: 1
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
        - name: ubuntu
          image: ubuntu
          command:
            - sleep
            - "infinity"
          volumeMounts:
            - mountPath: /app/my-folder
              name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
              claimName: volume-claim
