Cap 8/deployment-volume-gitrepo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: git-sync
          image: k8s.gcr.io/git-sync:v3.1.3
          volumeMounts:
          - name: www-data
            mountPath: /data
        - image: nginx
          name: nginx
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: "/usr/share/nginx/html"
            name: www-data
      volumes:
        - name: www-data
          emptyDir: {}
