Cap 8/pod-cephfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cephfs
spec:
  containers:
    - name: cephfs-rw
      image: kubernetes/pause
      volumeMounts:
        - mountPath: "/mnt/cephfs"
          name: cephfs
  volumes:
    - name: cephfs
      cephfs:
        monitors:
          - 10.16.154.78:6789
          - 10.16.154.82:6789
          - 10.16.154.83:6789
        user: admin
        secretFile: "/etc/ceph/admin.secret"
        readOnly: true
