Cap 8/pod-two-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: two-containers
spec:
  restartPolicy: Never
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: nginx-container
    image: nginx
    volumeMounts:
    - name: shared-data
      mountPath: /usr/share/nginx/html
  - name: sidecar-container
    image: debian
    volumeMounts:
    - name: shared-data
      mountPath: /my-data
    command: ["/bin/sh"]
    args: ["-c", "echo Hello from the sidecar container > /my-data/index.html"]
