Cap 8/pod-volume-gitrepo.yaml
# deprecated

apiVersion: v1
kind: Pod
metadata:
  name: server
spec:
  containers:
    - image: nginx
      name: nginx
      volumeMounts:
        - mountPath: /myrepo
          name: git-volume
  volumes:
    - name: git-volume
      gitRepo:
        repository: "git@somewhere:me/my-git-repository.git"
        revision: "0ac6305c685de2cf605cc128dd219dc3954bbd65"
