Cap 8/pod-volume-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-app
      image: nginx
      ports:
      - containerPort: 8080
      volumeMounts:
      - name: my-volume
        mountPath: /my-data
  volumes:
      - name: my-volume
        hostPath:
          path: /data
