Cap 8/db-service.yaml
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        name: db
    name: db
spec:
    ports:
        - name: "5432"
          port: 5432
          targetPort: 5432
    selector:
        name: db
status:
    loadBalancer: {}
